room-status/room-status.css
@import url(//fonts.googleapis.com/css?family=Roboto:400,300,100,100italic,300italic,400italic,500,500italic,700italic,700,900,900italic);
@import url(//fonts.googleapis.com/css?family=Pacifico);

* {
  box-sizing: border-box;
}

html, body {
  height: 100%;
  padding: 0;
  margin: 0;
  font-family: 'Roboto', sans-serif;
}

.btn {
  position: absolute;
  bottom: 30px;
  right: 50%;
  width: 200px;
  margin-right: -115px;
  padding: 15px;
  background: rgba(0, 0, 0, 0.2);
  border-radius: 34px;
  text-align: center;
  color: #fff;
  font-size: 15px;
  text-transform: uppercase;
  cursor: pointer;
}

section {
  display: table;
  width: 50%;
  height: 100%;
}

section.man {
  float: left;
}

section.woman {
  float: right;
}

.status {
  transition: background-color 0.3s ease;
  background-color: white;
}

.status.busy {
  background-color: #e74c3c;
}

.status.free {
  background-color: #2ecc71;
}

.icon {
  display: table-cell;
  font-size: 65.0vh;
  color: #fff;
  vertical-align: middle;
  text-align: center;
}

section.stats_content {
  /*display: table;*/
  width: 100%;
  height: 100%;
}

.stats-wrapper {
  display: flex;
  flex-direction: row;
}

.stats {
  width: auto;
  flex-grow: 1;
  /*display: table-cell;*/
  text-align: center;
  vertical-align: middle;
  transition: background-color 0.3s ease;
}

.name {
  font-family: 'Pacifico', cursive;
   -webkit-font-smoothing: antialiased;
  font-size: 34px;
  color: #fff;
}

.value {
  font-size: 80px;
  color: #fff;
}

.stats-man_count_day {
  background-color: #00bd9f;
}

.stats-woman_count_day {
  background-color: #00cc7c;
}

.stats-day_count {
  background-color: #1f99d6;
}

.stats-total_count {
  background-color: #a059b0;
}

.stats-longest_session {
  background-color: #32495c;
}

.stats-busiest_day {
  background-color: #93a5a6;
}

.timeline-wrapper {
  width: 100%;
  height: 500px;
  display: flex;
  padding: 10px 0 0 0;
  background-color: #f2f2f2;
}

.timeline-content {
  float: left;
  height: 100%;
  position: relative;
  flex-grow: 1;
}

.timeline-value {
  width: 40px;
  height: 100%;
  color: #fff;
  text-align: center;
}

.timeline-value span {
  display: block;
  position: absolute;
  bottom: 0;
  left: 50%;
  width: 30px;
  padding: 5px 0 30px 0;
  margin-left: -15px;
  background-color: #0088CC;
  text-align: center;
}

.timeline-hour {
  background-color: #E0E0E0;
  color: #A3A3A3;
  font-size: 14px;
  text-align: center;
}

